# Tech-Learning

./: README.md
C++/Chess_Project/: board.cpp  board.h  board_pieces.cpp  board_pieces.h  general_functions.cpp  general_functions.h  main.cpp
C++/questions/: tower_of_hanoi.cpp
C++/trialling/: trial.cpp
C++/uni_assignments/: checker.cpp
C++/uni_learning_1/: check_valid_input_+_clear.cpp  simple_variables.cpp  using(std).cpp
C++/uni_learning_10/: bad_allocation_exception.cpp  exception.cpp  lambda_function.cpp  list.cpp  mapping.cpp  smart_pointers.cpp
C++/uni_learning_2/: DMA_+_cast.cpp  function_calls.cpp  new_test.cpp  reference.cpp  reference2.cpp
C++/uni_learning_3/: getline.cpp  getline_compare.cpp  string_stream_modern.cpp  strings.cpp  strings_as_char_arrays.cpp  vector_complicated_sort_1.cpp  vector_complicated_sort_struct.cpp  vector_iterators.cpp  vectors.cpp  vectors_complicated_sort_2.cpp  vectors_more_search.cpp  vetors_sort.cpp
C++/uni_learning_4/: classes_1_clumsier.cpp  classes_2.cpp  struct.cpp  vector_of_objects.cpp
C++/uni_learning_5/: a_class_final.cpp  a_class_full.cpp  a_class_full_2.cpp  a_class_full_5.cpp
C++/uni_learning_6/: dma_array_with_operators+deep_copying.cpp  move_semantics.cpp  shallow_copying.cpp
C++/uni_learning_7/: 2_base_classes_one_derived.cpp  base_derived_without_protected.cpp  celestial_object.cpp  inheritance_deeper.cpp
C++/uni_learning_8/: abstract.cpp  (+6 more)
build_tools/learning_CMake/: CMakeLists.txt  main.cpp
build_tools/learning_CMake/Adder_dir/: CMakeLists.txt  adder.cpp  adder.h
python/: interview.py
(+159 files in other folders)
